test/test-files/analyzer/functions/error-function-args-match-declaration/exception.out
Semantic error in : ./test-files/analyzer/functions/error-function-args-match-declaration/source.spice:6:5:
Referenced undefined function: Function/Procedure 'testFunction()' could not be found

testFunction();
^^^^^^^^^^^^^^